# ecomerce

./: .gitignore  Makefile  README.md  pyproject.toml
infrastructure/api/: api_test.http  urls.py  views.py
infrastructure/website/: db.sqlite3  manage.py
infrastructure/website/apps/customer/: admin.py  models.py  repositories.py  urls.py  views.py
infrastructure/website/apps/customer/migrations/: 0001_initial.py  0002_alter_customer_email.py
infrastructure/website/apps/product/: admin.py  models.py  repositories.py  urls.py  views.py
infrastructure/website/apps/product/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_product_status.py  0004_alter_product_status.py  0005_alter_product_price.py
infrastructure/website/apps/reservation/: admin.py  models.py  repositories.py  urls.py  views.py
infrastructure/website/apps/reservation/migrations/: 0001_initial.py  0002_alter_reservation_unique_together.py
infrastructure/website/config/: settings.py  urls.py
service_customer/application/: dto.py  manager.py  storage.py
service_customer/domain/: entities.py  enums.py  exceptions.py
service_product/application/: dto.py  manager.py  storage.py
service_product/domain/: entities.py  enums.py  exceptions.py
service_reservation/application/: dto.py  manager.py  storage.py
service_reservation/domain/: entities.py  enums.py  exceptions.py
