[tool.poetry]
name = "ecomerce"
version = "0.1.0"
description = "Desafio em Python para vaga de Desenvolvedor Python na Nordway"
authors = ["Marcus <marcus.santos@bycoders.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-ninja = "^1.3.0"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
